Fix: spacing and text-breaking (#5355)
Fix #5244

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -35,11 +35,11 @@
   }
 }
 
-#layout:not(.sidebar-collapsed) #menu .nav-item > a:first-of-type {
+#layout:not(.sidebar-collapsed) #menu .nav-item > a:first-of-type,
+#layout:not(.minimal-layout).sidebar-collapsed #menu .nav-level-2 > .nav-item > a:first-of-type,
+#layout.minimal-layout #menu .nav-level-1 > .nav-item > a:first-of-type {
   // Respect overflowing content
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  .text-ellipsis();
 }
 
 #layout:not(.minimal-layout).sidebar-collapsed #menu .nav-level-1 > .nav-item {
@@ -537,9 +537,10 @@ html.no-js  #toggle-sidebar {
 
   span {
     padding-left: 1.375em;
+    padding-right: 0.545em;
     height: @nav-item-height;
-    display: flex;
-    align-items: center;
+    line-height: @nav-item-height;
+    display: block;
 
     font-weight: @font-weight-bold;
     .text-ellipsis();
